[package]
name = "txs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
csv = "1.3"
futures = "0.3"
rust_decimal = "1.38"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.47", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
rust_decimal_macros = "1.38"
